# telegram-gpt-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: bot.py  chat.py  settings.py  transcriber.py
